modified some code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,7 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/external/cutlass/tools/util/include
 )
 target_link_libraries(llm_components_cuda PRIVATE curand)
+find_package(fmt)
+target_link_libraries(llm_components_cuda PRIVATE fmt)
 set_target_properties(llm_components_cuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
